stopped filter numbers clipping on mob

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -60,9 +60,13 @@
 
 
 .filter-container{
+    position:relative;
+    left:10px;
     display:flex;
     flex-direction:column;
     gap:20px;
+    margin-left:15px;
+    margin-right:15px;
 }
 .filter{
     display:flex;
